eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Conga_Query_Data__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>ROUND(MOD((EndTime__c - StartTime__c)*86400,60),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DocuGen Data</relationshipLabel>
        <relationshipName>DocuGen_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Setting_Name__c</fullName>
        <label>Setting Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DocuGen Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Setting_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StartTime__c</columns>
        <columns>Duration__c</columns>
        <columns>EndTime__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Setting_Name__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>EndTime__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todays_documents</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Setting_Name__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Setting_Name__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <filters>
            <field>EndTime__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Todays documents</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todays_offer_letters</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Setting_Name__c</columns>
        <columns>Duration__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Setting_Name__c</field>
            <operation>contains</operation>
            <value>Offer</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays offer letters</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>Conga Query Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuGen Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>